--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -7,15 +7,20 @@
 
 html, body {
    @apply text-root/md sm:text-root/sm xs:text-root/xs bg-primary;
+   scroll-behavior: smooth;
 
 }
 
 
 :root {
    --color-primary: #ffffff;
-   --color-secondary: #91a5c0;
+   --color-secondary: #899ab4;
    --color-tertiary: hsl(173, 100%, 82%);
    --color-quaternary: rgb(228, 228, 228);
+}
+
+* {
+   scroll-behavior: smooth;
 }
 
 *::selection {
